# AMD_AI_Robotic_Challenge

./: .gitignore  .~lock.Numerics_Exam_Solutions_Formatted.docx#  Makefile  README.md  Untitled Document 2  capture_frames  capture_frames.cpp  check_camera  copy_file_from_board.sh  copy_file_to_board.sh  hello  input.cpp  main.csh  test.txt  test_webcam.py
OurTest/: MyProject  cameraTest  cameraTest.cpp  cameraTest.py  chatgptPrompt.txt  resetCAM.py  reset_webcam.sh
OurTest/HFNet_SLAM-main/: CMakeLists.txt  CMakePresets.json  build.sh
OurTest/HFNet_SLAM-main/Examples/Monocular/: EuRoC.yaml
OurTest/HFNet_SLAM-main/include/Extractors/: BaseModel.h  HFNetVITISModel.h  TensorRTBuffers.h
OurTest/HFNet_SLAM-main/src/Extractors/: HFNetRTModel.cc  HFNetVITISModel.cc
OurTest/g2o-master/: main.csh
_ORBSLAM_no_ROS/: mono_phone.cc  ourcommands.txt  phone_camera.yaml
_faceReg_Testing/: CMakeLists.txt  face_recognition_node.cpp  package.xml
basic_scripts/: capture_frames.cpp  check_camera.cpp  copy_file_from_board.sh  copy_file_to_board.sh  our_build_app.sh  submit_changes.sh  test.csh  update_repo.sh
cross_compiling/: CMakeLists.txt  aarch64-toolchain.cmake  clean_build.sh  main.csh
cross_compiling/src/: main.cpp
hfnet/: test  test.cpp  test.py
images/: test.py
ros2_ws_ORBSLAM/install/: local_setup.sh  setup.sh
ros2_ws_ORBSLAM/install/mono_phone_ros/share/mono_phone_ros/: local_setup.dsv  local_setup.sh  package.ps1  package.sh  package.xml
ros2_ws_ORBSLAM/install/mono_phone_ros/share/mono_phone_ros/cmake/: mono_phone_rosConfig.cmake
ros2_ws_ORBSLAM/install/my_slam_package/lib/my_slam_package/: slam_processor  video_publisher
ros2_ws_ORBSLAM/install/my_slam_package/share/ament_index/resource_index/package_run_dependencies/: my_slam_package
ros2_ws_ORBSLAM/install/my_slam_package/share/ament_index/resource_index/parent_prefix_path/: my_slam_package
ros2_ws_ORBSLAM/install/my_slam_package/share/my_slam_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws_ORBSLAM/install/my_slam_package/share/my_slam_package/cmake/: my_slam_packageConfig-version.cmake  my_slam_packageConfig.cmake
ros2_ws_ORBSLAM/install/my_slam_package/share/my_slam_package/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws_ORBSLAM/log/: latest_build
ros2_ws_ORBSLAM/src/mono_phone_ros/: CMakeLists.txt
ros2_ws_ORBSLAM/src/mono_phone_ros/src/: mono_phone_node.cpp
ros2_ws_ORBSLAM/src/my_slam_package/: CMakeLists.txt  package.xml
ros2_ws_ORBSLAM/src/my_slam_package/src/: slam_processor.cpp  video_publisher.cpp
ros2_ws_phone/install/: local_setup.sh  setup.sh
ros2_ws_phone/install/mono_phone_ros/lib/mono_phone_ros/: mono_phone_node
ros2_ws_phone/install/mono_phone_ros/share/ament_index/resource_index/package_run_dependencies/: mono_phone_ros
ros2_ws_phone/install/mono_phone_ros/share/mono_phone_ros/: package.bash  package.dsv  package.sh  package.zsh
ros2_ws_phone/log/: latest_build
ros2_ws_phone/src/mono_phone_ros/: CMakeLists.txt  package.xml
ros2_ws_phone/src/mono_phone_ros/src/: mono_phone_node.cpp
sandeep_works/: build.rar
sandeep_works/hello_world/: CMakeLists.txt  toolchain.cmake
